// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse should accept custom duration 1`] = `
<Memo(Collapse)
  animationDuration={100}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 100ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should accept custom duration 2`] = `
<Memo(Collapse)
  animationDuration={100}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 100ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should accept custom duration 3`] = `
<Memo(Collapse)
  animationDuration={100}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 100ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should close to custom height 1`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": undefined,
        "minHeight": undefined,
        "overflow": undefined,
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should close to custom height 2`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 500,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 0,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should close to custom height 3`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 100,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should close to custom height 4`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 100,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should close to default height 1`] = `
<Memo(Collapse)
  fadeOut={true}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": undefined,
        "minHeight": undefined,
        "overflow": undefined,
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should close to default height 2`] = `
<Memo(Collapse)
  fadeOut={true}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 500,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 0,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should close to default height 3`] = `
<Memo(Collapse)
  fadeOut={true}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should close to default height 4`] = `
<Memo(Collapse)
  fadeOut={true}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should match snapshot when collapsed 1`] = `
<div
  className="clearfix collapse"
  style={
    Object {
      "maxHeight": 0,
      "minHeight": undefined,
      "overflow": "hidden",
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
/>
`;

exports[`Collapse should match snapshot when expanded 1`] = `
<div
  className="clearfix collapse collapse-open"
  style={
    Object {
      "maxHeight": undefined,
      "minHeight": undefined,
      "overflow": undefined,
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
/>
`;

exports[`Collapse should match snapshot with custom collapsed height 1`] = `
<div
  className="clearfix collapse"
  style={
    Object {
      "maxHeight": 100,
      "minHeight": undefined,
      "overflow": "hidden",
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
/>
`;

exports[`Collapse should match snapshot with custom min height 1`] = `
<div
  className="clearfix collapse"
  style={
    Object {
      "maxHeight": 0,
      "minHeight": 100,
      "overflow": "hidden",
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
/>
`;

exports[`Collapse should match snapshot with customized fade out 1`] = `
<div
  className="clearfix collapse"
  style={
    Object {
      "maxHeight": 0,
      "minHeight": undefined,
      "overflow": "hidden",
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
>
  <div
    className="collapse-fade"
    style={
      Object {
        "background": "linear-gradient(rgba(0, 0, 0, 0), red 80%)",
        "bottom": 0,
        "height": 10,
        "opacity": 1,
        "position": "absolute",
        "transition": "ease-in-out 200ms opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Collapse should match snapshot with fade out 1`] = `
<div
  className="clearfix collapse"
  style={
    Object {
      "maxHeight": 0,
      "minHeight": undefined,
      "overflow": "hidden",
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
>
  <div
    className="collapse-fade"
    style={
      Object {
        "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
        "bottom": 0,
        "height": 50,
        "opacity": 1,
        "position": "absolute",
        "transition": "ease-in-out 200ms opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Collapse should open from custom height 1`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 100,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should open from custom height 2`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": 100,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should open from custom height 3`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": 500,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 0,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should open from custom height 4`] = `
<Memo(Collapse)
  fadeOut={true}
  maxCollapsedHeight={100}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": undefined,
        "minHeight": undefined,
        "overflow": undefined,
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should open from default height 1`] = `
<Memo(Collapse)
  fadeOut={true}
  open={false}
>
  <div
    className="clearfix collapse"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should open from default height 2`] = `
<Memo(Collapse)
  fadeOut={true}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": 0,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 1,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should open from default height 3`] = `
<Memo(Collapse)
  fadeOut={true}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": 500,
        "minHeight": undefined,
        "overflow": "hidden",
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  >
    <div
      className="collapse-fade"
      style={
        Object {
          "background": "linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%)",
          "bottom": 0,
          "height": 50,
          "opacity": 0,
          "position": "absolute",
          "transition": "ease-in-out 200ms opacity",
          "width": "100%",
        }
      }
    />
  </div>
</Memo(Collapse)>
`;

exports[`Collapse should open from default height 4`] = `
<Memo(Collapse)
  fadeOut={true}
  open={true}
>
  <div
    className="clearfix collapse collapse-open"
    style={
      Object {
        "maxHeight": undefined,
        "minHeight": undefined,
        "overflow": undefined,
        "position": "relative",
        "transition": "ease-in-out 200ms max-height",
      }
    }
  />
</Memo(Collapse)>
`;

exports[`Collapse should take regular element attributes 1`] = `
<div
  className="clearfix collapse my-class"
  style={
    Object {
      "maxHeight": 0,
      "minHeight": undefined,
      "overflow": "hidden",
      "position": "relative",
      "transition": "ease-in-out 200ms max-height",
    }
  }
/>
`;
